--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         </div>
         <p class="lead mb-5">I am a motivated and personable professional looking for a QA position where I can utilize my detail-oriented nature and hardworking skills to help a company grow and reach its goals.  <!--& <b style="color:#ff0101;" title="not yet">automated</b>--> 
 		I'm 23, happily married and have a five month old beautiful baby boy. 
-		</p>
+		</p> <br>
+	      <p> Take a look at my Social Media accounts: </p>
+	      
 		
 
         <div class="social-icons">
